--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,13 @@
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "no-console": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-filename-extension": [1, {
+      "extensions": [".tsx"]
+    }],
     "import/prefer-default-export": "off",
+    "no-shadow": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
